--- a/hw/hw3/styles.css
+++ b/hw/hw3/styles.css
@@ -2,5 +2,8 @@
                 background-color: #DDDAC7;
                 color: #002A4E;
                 position: relative;
-                margin: 100px;
+                margin-left: 100px;
+                margin-top: 50px;
+                font-family: Helvetica;
+                font-size: 14px;
             }
