--- a/hw/hw3/styles.css
+++ b/hw/hw3/styles.css
@@ -3,6 +3,7 @@
                 color: #002A4E;
                 position: relative;
                 margin-left: 100px;
+                margin-right: 100px;
                 margin-top: 50px;
                 font-family: Helvetica;
                 font-size: 14px;
